<resources>
    <string name="app_name">Edukids</string>
    <string name="validar">Validar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="media_description">Mídia principal</string>
    <string name="right_text">Correto!</string>
    <string name="action_right_text">Parabéns!</string>
    <string name="button_wrong_text">Tentar novamente</string>
    <string name="action_wrong_text">Tente de novo!</string>
    <string name="wrong_text">Você errou.</string>
    <string name="button_right_text">Continuar</string>
    <string name="wrong_password">Senha incorreta</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exemplo_de_atividade">Exemplo de atividade</string>
    <string name="activity_example">Exemplo de atividade</string>
    <string name="activity_main_text">Hora do exercício!</string>
    <string name="audiodescription">Audiodescrição do texto</string>
    <string name="exit_btn">Botão de sair</string>
    <string name="credential">Credencial do responsável</string>
    <string name="sucess_image">Imagem de sucesso</string>
    <string name="finished_activity">Atividade finalizada!</string>
    <string name="back">Voltar</string>
    <string name="atividades">Atividades</string>
    <string name="activity_icon">Ícone de atividades</string>
    <string name="paint_icon">Ícone de pintura</string>
    <string name="menu">Menu</string>
    <string name="progress">Progresso</string>
    <string name="help">Ajuda</string>
    <string name="configs">Configurações</string>
    <string name="premium_icon">Ícone premium</string>
    <string name="premium_text">Acesse a versão premium</string>
    <string name="loading">Carregando...</string>
    <string name="loading_gif">Gif de carregamento</string>
    <string name="default_web_client_id">1007300823407-fg0am05b6ddeav9pjkrt4qgqgfsfsuk2.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">Continuar com o Google</string>
    <string name="register_google">Continuar com o Google</string>
    <string name="google_icon">Ícone do google</string>
    <string name="do_login">Faça seu login</string>
    <string name="liked">Você curtiu esse conteúdo!</string>

</resources>