<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebackground"
    tools:context="view.HomeActivity">



    <LinearLayout
        android:id="@+id/home_progress_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="12dp"
        android:orientation="vertical"
        android:background="@drawable/shadow_overlay"
        android:visibility="gone"
        android:gravity="center">



    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_exercise_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="12dp"
        android:orientation="vertical"
        android:background="@drawable/shadow_overlay"
        android:visibility="gone"
        android:gravity="center">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/loadinggif"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/loading"
            android:fontFamily="@font/lalezar"
            android:textColor="#EFF558"
            android:textSize="50sp"/>
    </LinearLayout>

        <TextView
            android:id="@+id/hometext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="•   Seja bem-vindo!"
            android:fontFamily="@font/lalezar"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:padding="25dp"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/homeimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hometext"
            android:src="@drawable/homeimage"
            android:contentDescription="@string/paint_icon"
            android:layout_centerHorizontal="true"
            />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@id/homeimage"
        android:padding="15dp"
        android:orientation="vertical"
        android:gravity="center"
        >


        <TextView
            android:id="@+id/menulabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:fontFamily="@font/lalezar"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/btnWrapperUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:clickable="true">

                    <LinearLayout
                        android:id="@+id/exerciseButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@drawable/btnhome"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/activity_icon"
                            android:src="@drawable/actitiviesicon"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/atividades"
                            android:fontFamily="@font/lalezar"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>

                    </LinearLayout>


                    <Space
                        android:layout_width="16dp"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@drawable/rounded_button_unable"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/activity_icon"
                            android:src="@drawable/progressicon"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/progress"
                            android:fontFamily="@font/lalezar"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>

                    </LinearLayout>

                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>

                <LinearLayout
                    android:id="@+id/btnWrapperBottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:focusable="false"
                        android:background="@drawable/rounded_button_unable"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/activity_icon"
                            android:src="@drawable/helpicon"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/help"
                            android:fontFamily="@font/lalezar"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>

                    </LinearLayout>

                    <Space
                        android:layout_width="16dp"
                        android:layout_height="match_parent"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button_unable"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/activity_icon"
                            android:src="@drawable/configicon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lalezar"
                            android:text="@string/configs"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_unable"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/premium_icon"
                android:src="@drawable/premiumicon" />

            <Space
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lalezar"
                android:text="@string/premium_text"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>